...
      print("Launch Account Picker")
    } label: {
      Images.Shared.palaceLogo
    }
  }
  
  var searchButton: some View {
    Button {
      print("Launch Search View")
    } label: {
      Images.Shared.searchIcon
    }
  }
...
